--- a/assets/setup/install
+++ b/assets/setup/install
@@ -11,7 +11,9 @@ DATA_DIR="/data"
 # Start install
 mkdir -p ${ACTIVEMQ_HOME}
 cd /usr/src
-curl -LO http://apache.mirrors.ovh.net/ftp.apache.org/dist/activemq/${ACTIVEMQ_VERSION}/apache-activemq-${ACTIVEMQ_VERSION}-bin.tar.gz
+curl -LO http://archive.apache.org/dist/activemq/apache-activemq/${ACTIVEMQ_VERSION}/apache-activemq-${ACTIVEMQ_VERSION}-bin.tar.gz
+#http://archive.apache.org/dist/activemq/apache-activemq/5.5.1/apache-activemq-5.5.1-bin.tar.gz
+
 tar -xvzf apache-activemq-${ACTIVEMQ_VERSION}-bin.tar.gz
 mv apache-activemq-${ACTIVEMQ_VERSION}/* ${ACTIVEMQ_HOME}
 rm -rf /usr/src/*
